<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>gis-portal</artifactId>
        <groupId>ru.mycrg</groupId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>auth-service-contract</artifactId>
    <version>1.6-SNAPSHOT</version>

    <name>auth-service-contract</name>
    <description>Contract of auth-service</description>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>2.0.2</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>messagebus-contract</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>GisPlatformFeed</id>
            <name>Gis portal azure repository</name>
            <url>https://pkgs.dev.azure.com/programgeoplan/a6547131-6a32-454f-a123-0f76fe536a3c/_packaging/GisPlatformFeed/maven/v1</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>GisPlatformFeed</id>
            <url>https://pkgs.dev.azure.com/programgeoplan/a6547131-6a32-454f-a123-0f76fe536a3c/_packaging/GisPlatformFeed/maven/v1</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
